<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/add_opinion_dialog_cancel_button"
        android:src="@drawable/crop__ic_cancel"
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <EditText
        android:layout_below="@+id/add_opinion_dialog_cancel_button"
        android:id="@+id/add_opinion_edit_text"
        android:gravity="top"
        android:padding="10dp"
        android:lines="5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/add_opinion_edit_text_bg"
        android:hint="@string/add_opinion_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/warning_select_a_side"
        android:visibility="gone"
        android:text="@string/select_a_side_warning_message"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        android:textColor="@color/red_warning_text_color"
        android:layout_below="@id/add_opinion_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/add_opinion_buttons_parent"
        android:layout_centerInParent="true"
        android:layout_below="@id/warning_select_a_side"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_opinion_agree_button"
            android:text="@string/agree"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_opinion_button_selected_bg"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:id="@+id/add_opinion_disagree_button"
            android:text="@string/disagree"
            android:layout_marginStart="20dp"
            android:textColor="@color/light_grey"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_opinion_button_unselected_bg"
            />
    </LinearLayout>

    
    <Button
        android:id="@+id/add_opinion_submit_button"
        android:layout_width="100dp"
        android:text="submit"
        android:layout_height="50dp"
        android:layout_below="@id/add_opinion_buttons_parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        />





</RelativeLayout>
