<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/opozee_logo"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fb_btn_bg"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
           android:layout_marginTop="@dimen/_30sdp"/>

        <ProgressBar
            android:id="@+id/fb_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_primary"
            app:layout_constraintTop_toTopOf="@+id/btn_fb"
            app:layout_constraintStart_toStartOf="@+id/btn_fb"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/google_btn_bg"
            android:text="@string/login_with_google"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/btn_fb"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/btn_fb"
            app:layout_constraintEnd_toEndOf="@+id/btn_fb"/>

        <ProgressBar
            android:id="@+id/google_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_primary"
            app:layout_constraintTop_toTopOf="@+id/btn_google"
            app:layout_constraintStart_toStartOf="@+id/btn_google"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_google"
            android:layout_marginTop="@dimen/_25sdp"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0.4"
                android:textColor="@color/grey_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="OR"
                android:textColor="@color/grey"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0.4"
                android:textColor="@color/grey_light" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_text">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_color"
                android:hint="@string/text_email"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/black_color"
                android:textSize="@dimen/_15sdp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/_15sdp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_email">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_color"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/black_color"
                android:imeActionLabel= "Search"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_15sdp" />

        </android.support.design.widget.TextInputLayout>
        <!--<TextView-->
            <!--android:id="@+id/tv_email"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/ll_text"-->
            <!--android:layout_marginTop="@dimen/_30sdp"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginLeft="@dimen/_15sdp"-->
            <!--android:text="@string/text_email"-->
            <!--android:textSize="@dimen/_13sdp"-->
            <!--android:textColor="@color/black_color"/>-->

        <!--<EditText-->
            <!--android:id="@+id/et_email"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tv_email"-->
            <!--app:layout_constraintStart_toStartOf="@+id/tv_email"-->
            <!--app:layout_constraintEnd_toEndOf="@+id/btn_google"-->
            <!--android:background="@drawable/editext_background"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:textSize="@dimen/_13sdp"-->
            <!--android:padding="@dimen/_8sdp"-->
            <!--android:singleLine="true"-->
            <!--android:maxLines="1"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_password"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/_13sdp"-->
            <!--android:maxLines="1"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/et_email"-->
            <!--app:layout_constraintStart_toStartOf="@+id/tv_email"-->
            <!--android:layout_marginTop="@dimen/_15sdp"-->
            <!--android:text="@string/text_password"-->
            <!--android:textColor="@color/black_color"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_password"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tv_password"-->
            <!--app:layout_constraintStart_toStartOf="@+id/tv_password"-->
            <!--app:layout_constraintEnd_toEndOf="@+id/btn_google"-->
            <!--android:background="@drawable/editext_background"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1"-->
            <!--android:textSize="@dimen/_13sdp"-->
            <!--android:padding="@dimen/_8sdp"/>-->
        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tl_password"
            app:layout_constraintEnd_toEndOf="@+id/btn_google"
            android:text="@string/text_forgot"
            android:textColor="@color/blue"
            android:padding="@dimen/_10sdp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/text_login"
            android:textColor="@color/white_color"
            app:layout_constraintEnd_toEndOf="@+id/btn_google"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_google"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot" />

        <TextView
            android:id="@+id/tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            android:text="@string/text_newuser"
            android:layout_marginTop="@dimen/_15sdp"
            android:textAlignment="center"
            android:layout_marginRight="@dimen/_45sdp"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_50sdp"/>
        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_new"
            android:text="@string/text_signUp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="@+id/tv_new"

            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
