<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:id="@+id/top_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/white_color"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/tv_header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:src="@drawable/opozee_logo" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_header"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fb_btn_bg"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/_18sdp" />

                <ProgressBar
                    android:id="@+id/fb_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/color_primary"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.4"
                    android:textColor="@color/grey_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    android:gravity="center"
                    android:text="OR"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.4"
                    android:textColor="@color/grey_light" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/google_btn_bg"
                    android:text="@string/login_with_google"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/_18sdp" />

                <ProgressBar
                    android:id="@+id/google_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/color_primary"
                    android:visibility="gone" />
            </FrameLayout>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>